feat: make prod ssl

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,11 +15,13 @@ spring:
           jwk-set-uri: ${JWT_JWK_SET_URI:http://localhost:8080/api/v1/auth/.well-known/jwks.json}
   kafka:
     consumer:
-      bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+      bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
       schema:
         log: ${KAFKA_LOG_SCHEMA:log}
       properties:
         schema.registry.url: ${KAFKA_REGISTRY:http://127.0.0.1:8000}
+        security.protocol: SSL
+        ssl.truststore.location: /etc/ssl/certs/global-bundle.pem
 
 cors:
   origin: ${CORS_ORIGIN:http://localhost:3000}
