--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,8 @@ spring:
       bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
       schema:
         log: ${KAFKA_LOG_SCHEMA:log}
+      properties:
+        schema.registry.url: ${KAFKA_REGISTRY:http://127.0.0.1:8000}
 
 aws:
   registry: ${KAFKA_REGISTRY:localhost:8000}
